Hunain - added login button to header

--- a/pages/components/header.html
+++ b/pages/components/header.html
@@ -13,5 +13,9 @@
         <nav class="header-nav-right">
             <a href="contact-us.html" class="nav-link">Contact Us</a>
         </nav>
+
+                <nav class="header-nav-right">
+            <a href="login.html" class="nav-link">Login</a>
+        </nav>
     </div>
 </header>
