--- a/css/layout/hunain-test copy.css
+++ b/css/layout/hunain-test copy.css
@@ -1,16 +1,25 @@
-.container1101 { /*big wrapper creating 1 ds*/
+.container3by3 { /*big wrapper creating 1 ds*/
   display: grid;
-  grid-template-columns: repeat(3, auto);
+  grid-template-columns:  repeat(3, auto);
   grid-template-rows: repeat(3, auto);
   align-content: stretch;
   gap: 10px;
   justify-items: stretch;
-  height: 100%3
+  height: 100%;
+}
+
+.container4by4 { /*big wrapper creating 1 ds*/
+  display: grid;
+  grid-template-columns:  repeat(4, auto);
+  grid-template-rows: repeat(4, auto);
+  align-content: stretch;
+  gap: 10px;
+  justify-items: stretch;
+  height: 100%;
 }
 
 
 .left-side-bar-1101 {
-  
   background-color: blue;
   text-align: center;
   justify-items: stretch;
@@ -20,6 +29,5 @@
 .content1101 {
   background-color: yellow;
   justify-items: stretch;
-  grid-column: 2 / span 2;
-  grid-row: 1 / span 2
+  grid-row: 1 / span 3
 }
