--- a/CSS/layout/angie-test.css
+++ b/CSS/layout/angie-test.css
@@ -1,13 +1,3 @@
-.container3by3 { /*big wrapper creating 1 ds*/
-  display: grid;
-  grid-template-columns:  repeat(3, auto);
-  grid-template-rows: repeat(3, auto);
-  align-content: stretch;
-  gap: 10px;
-  justify-items: stretch;
-  height: 100%;
-}
-
 .container4by4 { /*big wrapper creating 1 ds*/
   display: grid;
   grid-template-columns:  repeat(4, auto);
@@ -19,15 +9,26 @@
 }
 
 
-.left-side-bar-1101 {
+.first-left-bar-1101 {
   background-color: blue;
   text-align: center;
   justify-items: stretch;
   grid-row: span 3;
 }
 
-.content1101 {
-  background-color: yellow;
+.second-left-bar-1101 {
+  background-color: rgb(0, 21, 255);
   justify-items: stretch;
   grid-row: 1 / span 3
+}
+.first-right-bar-1101 {
+  background-color: rgb(182, 45, 161);
+  justify-items: stretch;
+  grid-row: 1 / span 3
+}
+.second-right-bar-1101 {
+  background-color: rgb(167, 109, 62);
+  text-align: center;
+  justify-items: stretch;
+  grid-row: span 3;
 }
