hunain - adjust the grid layout tests

--- a/css/base/global.css
+++ b/css/base/global.css
@@ -17,6 +17,7 @@ body {
     line-height: 1.6;
     
     /* Layout */
+    height: 100%;
     min-height: 100vh;
     
     /* Account for fixed header and footer */
