--- a/css/layout/hunain-test copy.css
+++ b/css/layout/hunain-test copy.css
@@ -41,27 +41,20 @@
 .middle-container {
   justify-items: center;
   grid-row:2 / 3;
-  grid-column-start:3;
-  grid-column-end:3;
+  grid-column:3 / 3;
 }
 
 .section-first {
-  grid-row-start:3;
-  grid-row-end:4;
-  grid-column-start:2;
-  grid-column-end:3;
+  grid-row: 3 / 4;
+  grid-column: 2 / 3;
 }
 
 .section-second {
-  grid-row-start:3;
-  grid-row-end:4;
-  grid-column-start:3;
-  grid-column-end:4;
+  grid-row: 3 / 4;
+  grid-column: 3 / 4;
 }
 
 .section-third {
-  grid-row-start:3;
-  grid-row-end:4;
-  grid-column-start:4;
-  grid-column-end:5;
+  grid-row: 3 / 4;
+  grid-column: 4 / 5;
 }
