--- a/css/layout/hunain-test copy.css
+++ b/css/layout/hunain-test copy.css
@@ -100,7 +100,7 @@
   grid-column: 2 ;
   /*   
        1 2 3 
-     1 -|1|-
+     1 -|x|-
      2 -|-|-
      3 -|-|-
      Row first then column for naming*/
@@ -151,9 +151,22 @@
      3 -|-|x
      Row first then column for naming*/
 }
-
-
-.Waves_Icon {
+   .OneThree-Two {   
+  justify-content: center;
+  align-items: center;     
+  grid-row: 1 / 3;
+  grid-column: 2;
+  /*   
+       1 2 3 
+     1 -|x|-
+     2 -|x|-
+     3 -|x|-
+     Row first then column for naming*/
+}
+/* ============================================
+   Standard helper classes
+   ============================================ */
+.Waves_Icon { /* Bullet point used in About Us page. Needs a proper home */
   justify-self: center;
   align-self: center;
   padding-bottom: 10px;
