--- a/css/main.css
+++ b/css/main.css
@@ -28,8 +28,6 @@
 @import url('components/links.css');
 
 /* 6. PAGES - Page-specific styles (use sparingly) */
-@import url('pages/contact-us.css');
-@import url('pages/term-and-conditions.css');
-@import url('pages/privacy-policy.css');
+/* page specific css's are called individually in respective html files  */
 
 /* 7. UTILITIES - Helper classes (if needed) */
