angie changing name of pages home and terms and conditions css

--- a/CSS/pages/page-specifc.css
+++ b/CSS/pages/page-specifc.css
@@ -57,3 +57,9 @@ the additional parameters should be added to "OneThree-Two*/
     justify-self: center;
 
 }
+
+.home .OneThree-Two {
+    max-width: 20%;
+    justify-self: center;
+
+}
