angie and hunain push new header grid

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -52,6 +52,14 @@ header {
     position: relative;
 }
 
+.header-grid {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+}
+
 /* ============================================
    HEADER NAVIGATION CONTAINERS
    ============================================ */
