--- a/pages/components/header.html
+++ b/pages/components/header.html
@@ -1,4 +1,4 @@
-<header>
+<!-- <header>
     <div class="header-content">
         <nav class="header-nav-left">
             <a href="about-us.html" class="nav-link">About Us</a>
@@ -17,5 +17,22 @@
         <nav class="header-nav-right">
             <a href="login.html" class="nav-link">Login</a>
         </nav>
+    </div>
+</header> -->
+
+<header>
+    <div class="header-grid">
+
+        <div class="logo">
+            <a href="index.html">
+                <img src="{{mediaPath}}Media/lhoklogo.png" alt="LHOK Logo">
+            </a>
+        </div>
+        <a href="about-us.html" class="nav-link">About Us</a>
+        
+        <a href="contact-us.html" class="nav-link">Contact Us</a>
+
+        <a href="login.html" class="nav-link">Login</a>
+
     </div>
 </header>
