--- a/pages/components/header.html
+++ b/pages/components/header.html
@@ -22,11 +22,12 @@
 
 <header>
     <div class="header-grid">
-
-        <div class="logo">
-            <a href="index.html">
-                <img src="{{mediaPath}}Media/lhoklogo.png" alt="LHOK Logo">
-            </a>
+        <div class="header-One-One">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="{{mediaPath}}Media/lhoklogo.png" alt="LHOK Logo">
+                </a>
+            </div>
         </div>
         <a href="about-us.html" class="nav-link">About Us</a>
         
