--- a/pages/components/footer.html
+++ b/pages/components/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<!-- <footer class="footer">
     <div class="footer-container">
         <div class="footer-content">
             <div class="footer-links-left">
@@ -20,6 +20,36 @@
             </div>
 
         </div>
+        
+        <div class="footer-bottom">
+            <p>&copy; 2025 LHOK. All rights reserved.</p>
+        </div>
+    </div>
+</footer> -->
+
+
+<footer>
+    <div class="footer-grid">
+
+      
+                <a href="index.html" class="footer-nav-link">Home</a>
+                <a href="about-us.html" class="footer-nav-link">About Us</a>
+                <a href="privacy-policy.html" class="footer-nav-link">Privacy Policy</a>
+
+            
+            <div class="footer-logo">
+                <a href="index.html">
+                    <img src="{{mediaPath}}Media/lhoklogo.png" alt="LHOK Logo">
+                </a>
+            </div>
+            
+      
+                <a href="contact-us.html" class="footer-nav-link">Contact Us</a>
+                <a href="https://www.instagram.com/lhok.ca/" class="footer-nav-link" target="_blank">Start Lhoking</a>
+                <a href="terms-and-conditions.html" class="footer-nav-link">Terms and Conditions</a>
+       
+
+
         
         <div class="footer-bottom">
             <p>&copy; 2025 LHOK. All rights reserved.</p>
