--- a/pages/components/header.html
+++ b/pages/components/header.html
@@ -1,4 +1,4 @@
-<!-- <header>
+<!-- old <header>
     <div class="header-content">
         <nav class="header-nav-left">
             <a href="about-us.html" class="nav-link">About Us</a>
