--- a/css/layout/hunain-test copy.css
+++ b/css/layout/hunain-test copy.css
@@ -41,18 +41,19 @@
    Standard Children Containers for 4 by 4 Grid
    ============================================ */
 
-.OneTwo-OneThree {   
+/* .OneTwo-OneThree {   
   background-color: rgb(211, 154, 230);
   justify-items: center;
   grid-row: 1 / 1;
   grid-column: 2 / 3;
+  } */
   /*   1 2 3 4
      1 -|x|x|-
      2 -|-|-|-
      3 -|-|-|-
      4 -|-|-|- 
      Row first then column for naming*/
-}
+
 
 .ThreeOne-FourTwo {
   background-color: rgb(211, 154, 230);
