Deleting grid.css but need to clean up from hunain test

--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,9 @@
 @import url('layout/responsive.css');
 @import url('layout/spacing.css');
 
-/*@import url('layout/angie-test.css');*/
+/*@import url('layout/hunain copy-test.css');*/
 
-@import url('layout/hunain-test.css');
+@import url('layout/hunain-test copy.css');
 
 /* 5. COMPONENTS - Reusable UI components */
 @import url('components/buttons.css');
