--- a/css/variables.css
+++ b/css/variables.css
@@ -4,14 +4,20 @@
        ============================================ x:var(-- lets you search the color you want */
     --color-primary: #b54dbc;
     --color-primary-dark: #9a3ea3;
+    
+    --color-secondary: #333333;
+    --color-secondary-dark: #333333;
+
+
     --color-white: #ffffff;
     --color-gray-dark: #333333;
     --color-gray-medium: #666666;
     --color-gray-light: #e0e0e0;
     
     /* Semantic color names */
-    --color-text-primary: var(--color-gray-dark);
-    --color-text-secondary: var(--color-gray-medium);
+    --color-text-primary: var(--color-secondary);
+    --color-text-secondary: var(--color-secondary-dark);
+
     --color-background: var(--color-white);
     --color-link: var(--color-primary);
     --color-link-hover: var(--color-white);
@@ -19,7 +25,11 @@
     /* ============================================
        TYPOGRAPHY
        ============================================ */
-    --font-family-primary: Arial, sans-serif;
+       /* Headers */
+    --font-family-primary: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      /* paragraph, normal text, links */
+    --font-family-secondary: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    
     
     /* Font sizes - using rem for accessibility */
     --font-size-title: 2rem;        /* 32px */
