--- a/pages/components/submit-button.html
+++ b/pages/components/submit-button.html
@@ -1,2 +1,2 @@
-
-<button class="custom-button">Join Lhok</button>
+<!-- <button class="custom-button">Join Lhok</button> -->
+<button onclick="window.location.href='pages/home.html'" class="custom-button">Join Lhok</button>
