Hunain - approval status js and test env created
also added to header and footer

--- a/pages/components/footer.html
+++ b/pages/components/footer.html
@@ -46,7 +46,7 @@
                 <a href="contact-us.html" class="footer-nav-link">Contact Us</a>
                 <a href="https://www.instagram.com/lhok.ca/" class="footer-nav-link" target="_blank">Start Lhoking</a>
                 <a href="terms-and-conditions.html" class="footer-nav-link">Terms and Conditions</a>
-    
+                    <a href="__user-approval-page.html" class="footer-nav-link">Admin Approval</a>
         <div class="footer-bottom">
             <p>&copy; 2025 LHOK. All rights reserved.</p>
         </div>
