--- a/CSS/pages/page-specifc.css
+++ b/CSS/pages/page-specifc.css
@@ -68,3 +68,8 @@ the additional parameters should be added to "OneThree-Two*/
     justify-self: center;
 }
 
+.professional-hub .OneThree-Two {
+    max-width: 66%;
+    justify-self: center;
+}
+
