Hunain - professional public profile auto population working

--- a/CSS/pages/page-specifc.css
+++ b/CSS/pages/page-specifc.css
@@ -68,7 +68,7 @@ the additional parameters should be added to "OneThree-Two*/
     justify-self: center;
 }
 
-.professional-hub .OneThree-Two {
+.public-profiles .OneThree-Two {
     max-width: 66%;
     justify-self: center;
 }
