--- a/pages/components/header.html
+++ b/pages/components/header.html
@@ -32,7 +32,7 @@
         <a href="about-us.html" class="nav-link">About Us</a>
         
         <a href="contact-us.html" class="nav-link">Contact Us</a>
-        <a href="professional-hub.html" class="nav-link">Available Professionals</a>
+        <a href="public-profiles.html" class="nav-link">Available Professionals</a>
         <a href="login.html" class="nav-link">Login</a>
 
     </div>
