--- a/css/layout/hunain-test copy.css
+++ b/css/layout/hunain-test copy.css
@@ -88,7 +88,29 @@
      4 -|-|x|x 
      Row first then column for naming*/
 }
+.OneOne-FourOne {
+  background-color: rgb(211, 52, 73);
+  grid-row: 1 / 5;
+  grid-column: 1 / 2;
+    /* 1 2 3 4
+     1 x|-|-|-
+     2 x|-|-|-
+     3 x|-|-|-
+     4 x|-|-|- 
+     Row first then column for naming*/
+}
 
+.OneTwo-FourFour {
+  background-color: rgb(49, 23, 97);
+  grid-row: 1 / 5;
+  grid-column: 2 / 5;
+    /* 1 2 3 4
+     1 -|x|x|x
+     2 -|x|x|x  
+     3 -|x|x|x
+     4 -|x|x|x 
+     Row first then column for naming*/
+}
 .TwoTwo-ThreeTwo {
   grid-row: 2 / 3;
   grid-column: 2 / 2;
@@ -108,6 +130,16 @@
      2 -|-|-|-
      3 -|-|x|x
      4 -|-|x|x 
+     Row first then column for naming*/
+}
+.OneTwo-OneFour {
+  grid-row: 1 / 2;
+  grid-column: 2 / 5;
+    /* 1 2 3 4
+     1 -|x|x|x
+     2 -|-|-|-
+     3 -|-|-|-
+     4 -|-|-|- 
      Row first then column for naming*/
 }
 
