Ang main container

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
 @import url('layout/responsive.css');
 @import url('layout/spacing.css');
 
-/*@import url('layout/hunain copy-test.css');*/
+/*@import url('layout/containers.css');*/
 @import url('layout/containers.css');
 
 /* 5. COMPONENTS - Reusable UI components */
